output_10.1.168/contract_quda.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
/tmp/contract_quda.h-69f98e.hip:8:27: error: unknown type name 'ColorSpinorField'
  void contractQuda(const ColorSpinorField &x, const ColorSpinorField &y, void *result, QudaContractType cType);
                          ^
/tmp/contract_quda.h-69f98e.hip:8:54: error: unknown type name 'ColorSpinorField'
  void contractQuda(const ColorSpinorField &x, const ColorSpinorField &y, void *result, QudaContractType cType);
                                                     ^
3 errors generated when compiling for host.
Error while processing /tmp/contract_quda.h-69f98e.hip.

[HIPIFY] info: file './quda/include/contract_quda.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 0
  UNCONVERTED refs count: 0
  CONVERSION %: 0
  REPLACED bytes: 0
  TOTAL bytes: 210
  CHANGED lines of code: 1
  TOTAL lines of code: 9
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 11
  TIME ELAPSED s: 0.54
